Initial commit and basic README.

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-starterkit",
+  "name": "nexus-react-starterkit",
   "version": "0.0.0",
-  "homepage": "https://github.com/elierotenberg/my-starterkit",
+  "homepage": "https://github.com/elierotenberg/nexus-react-starterkit",
   "authors": [
     "Elie Rotenberg <elie@rotenberg.io>"
   ],
