--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
     "envify": "^3.2.0",
     "gulp": "^3.8.10",
     "gulp-6to5": "^1.0.1",
+    "gulp-add-src": "^0.2.0",
     "gulp-concat": "^2.4.1",
+    "gulp-cssbeautify": "^0.1.3",
     "gulp-imagemin": "^2.0.0",
     "gulp-insert": "^0.4.0",
     "gulp-jshint": "^1.9.0",
     "gulp-plumber": "^0.6.6",
     "gulp-postcss": "^3.0.0",
     "gulp-react": "^2.0.0",
-    "gulp-react-nexus-style": "^0.1.3",
+    "gulp-react-nexus-style": "^0.1.7",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.1",
@@ -46,11 +48,12 @@
     "6to5": "^1.11.3",
     "bluebird": "^2.3.11",
     "co": "^3.1.0",
+    "gulp-react-nexus-style": "^0.1.4",
     "lodash-next": "^1.3.1",
-    "nexus-router": "^0.1.3",
+    "nexus-router": "^0.1.4",
     "nexus-uplink-client": "^0.2.0",
     "nexus-uplink-simple-server": "^0.1.1",
-    "react-nexus": "git://github.com/elierotenberg/react-rails#nexus-refactor",
+    "react-nexus": "git://github.com/elierotenberg/react-rails#1.0-rc",
     "should": "^4.2.1"
   }
 }
