--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/elierotenberg/nexus-react-starterkit",
   "devDependencies": {
     "autoprefixer-core": "^4.0.0",
-    "brfs": "^1.2.0",
     "browserify": "^6.3.2",
     "css-mqpacker": "^1.1.2",
     "csswring": "^1.3.1",
@@ -48,11 +47,13 @@
     "6to5": "^1.11.3",
     "bluebird": "^2.3.11",
     "co": "^3.1.0",
+    "cors": "^2.5.2",
+    "express": "^4.10.2",
     "gulp-react-nexus-style": "^0.1.4",
     "lodash-next": "^1.3.1",
     "nexus-router": "^0.1.4",
-    "nexus-uplink-client": "^0.2.0",
-    "nexus-uplink-simple-server": "^0.1.1",
+    "nexus-uplink-client": "^0.2.2",
+    "nexus-uplink-simple-server": "^0.2.2",
     "react-nexus": "git://github.com/elierotenberg/react-rails#1.0-rc",
     "should": "^4.2.1"
   }
