--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node ./dist/server.js"
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -50,11 +50,12 @@
     "cors": "^2.5.2",
     "express": "^4.10.2",
     "gulp-react-nexus-style": "^0.1.4",
+    "http-exceptions": "^0.3.2",
     "lodash-next": "^1.6.1",
     "nexus-router": "^0.1.4",
-    "nexus-uplink-client": "^0.5.3",
-    "nexus-uplink-simple-server": "^0.6.1",
-    "react-nexus": "^0.9.1",
+    "nexus-uplink-client": "^0.5.4",
+    "nexus-uplink-simple-server": "^0.6.2",
+    "react-nexus": "^0.9.3",
     "should": "^4.2.1"
   }
 }
