--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "jshint-stylish": "^1.0.0",
+    "morgan": "^1.5.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
-    "6to5": "^1.13.0",
+    "6to5": "^1.13.1",
     "bluebird": "^2.3.11",
     "co": "^4.0.0",
     "cors": "^2.5.2",
@@ -51,10 +52,10 @@
     "gulp-react-nexus-style": "^0.2.0",
     "http-exceptions": "^0.4.0",
     "lodash-next": "^1.7.0",
-    "nexus-router": "^0.2.0",
+    "nexus-router": "^0.2.1",
     "nexus-uplink-client": "^0.6.0",
-    "nexus-uplink-simple-server": "^0.7.1",
-    "react-nexus": "^0.10.1",
+    "nexus-uplink-simple-server": "^0.8.0",
+    "react-nexus": "^0.10.3",
     "should": "^4.3.0"
   }
 }
