--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
   "homepage": "https://github.com/elierotenberg/nexus-react-starterkit",
   "devDependencies": {
     "autoprefixer-core": "^4.0.1",
-    "browserify": "^6.3.2",
     "css-mqpacker": "^1.1.2",
     "csswring": "^1.3.1",
     "del": "^0.1.3",
-    "envify": "^3.2.0",
     "gulp": "^3.8.10",
     "gulp-6to5": "^1.0.2",
     "gulp-add-src": "^0.2.0",
@@ -33,15 +31,17 @@
     "gulp-plumber": "^0.6.6",
     "gulp-postcss": "^3.0.0",
     "gulp-react": "^2.0.0",
-    "gulp-react-nexus-style": "^0.2.2",
+    "gulp-react-nexus-style": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
+    "gulp-webpack": "^1.0.0",
     "jshint-stylish": "^1.0.0",
     "morgan": "^1.5.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "webpack": "^1.4.13"
   },
   "dependencies": {
     "6to5": "^1.13.4",
@@ -53,9 +53,9 @@
     "http-exceptions": "^0.4.0",
     "lodash-next": "^1.7.0",
     "nexus-router": "^0.3.0",
-    "nexus-uplink-client": "^0.7.0",
+    "nexus-uplink-client": "^0.8.1",
     "nexus-uplink-simple-server": "^0.11.1",
-    "react-nexus": "^0.13.3",
+    "react-nexus": "^0.14.0",
     "should": "^4.3.0"
   }
 }
