--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "gulp-plumber": "^0.6.6",
     "gulp-postcss": "^3.0.0",
     "gulp-react": "^2.0.0",
-    "gulp-react-nexus-style": "^0.3.0",
+    "gulp-react-nexus-style": "^0.3.3",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "gulp-webpack": "^1.0.0",
+    "gulp-wrap": "^0.5.0",
     "jshint-stylish": "^1.0.0",
     "morgan": "^1.5.0",
     "vinyl-buffer": "^1.0.0",
@@ -44,18 +45,15 @@
     "webpack": "^1.4.13"
   },
   "dependencies": {
-    "6to5": "^1.13.4",
-    "bluebird": "^2.3.11",
-    "co": "^4.0.0",
+    "6to5": "^1.13.10",
     "cors": "^2.5.2",
     "express": "^4.10.2",
     "gulp-react-nexus-style": "^0.2.0",
-    "http-exceptions": "^0.4.0",
-    "lodash-next": "^1.7.0",
-    "nexus-router": "^0.3.0",
-    "nexus-uplink-client": "^0.8.1",
-    "nexus-uplink-simple-server": "^0.11.1",
-    "react-nexus": "^0.14.0",
-    "should": "^4.3.0"
+    "http-exceptions": "^0.4.3",
+    "lodash-next": "^1.8.3",
+    "nexus-router": "^0.3.3",
+    "nexus-uplink-client": "^0.8.5",
+    "nexus-uplink-simple-server": "^0.11.5",
+    "react-nexus": "^0.15.1"
   }
 }
