--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "homepage": "https://github.com/elierotenberg/nexus-react-starterkit",
   "devDependencies": {
     "autoprefixer-core": "^4.0.1",
-    "css-mqpacker": "^1.1.2",
-    "csswring": "^1.3.1",
+    "css-mqpacker": "^2.0.0",
+    "csswring": "^2.0.0",
     "del": "^0.1.3",
     "gulp": "^3.8.10",
     "gulp-6to5": "^1.0.2",
@@ -36,24 +36,25 @@
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
-    "gulp-webpack": "^1.0.0",
+    "gulp-webpack": "^1.1.0",
     "gulp-wrap": "^0.5.0",
     "jshint-stylish": "^1.0.0",
+    "json-loader": "^0.5.1",
     "morgan": "^1.5.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "webpack": "^1.4.13"
   },
   "dependencies": {
-    "6to5": "^1.13.10",
+    "6to5": "^1.14.4",
     "cors": "^2.5.2",
-    "express": "^4.10.2",
+    "express": "^4.10.4",
     "gulp-react-nexus-style": "^0.2.0",
-    "http-exceptions": "^0.4.3",
-    "lodash-next": "^1.8.3",
-    "nexus-router": "^0.3.3",
-    "nexus-uplink-client": "^0.8.5",
-    "nexus-uplink-simple-server": "^0.11.5",
+    "http-exceptions": "^0.4.4",
+    "lodash-next": "^1.8.5",
+    "nexus-router": "^0.3.4",
+    "nexus-uplink-client": "^0.8.6",
+    "nexus-uplink-simple-server": "^0.11.6",
     "react-nexus": "^0.15.1"
   }
 }
