--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "nexus-react-starterkit",
-  "version": "0.0.0",
-  "homepage": "https://github.com/elierotenberg/nexus-react-starterkit",
+  "name": "react-nexus-starterkit",
+  "version": "0.2.1",
+  "homepage": "https://github.com/elierotenberg/react-nexus-starterkit",
   "authors": [
     "Elie Rotenberg <elie@rotenberg.io>"
   ],
