--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "gulp-plumber": "^0.6.6",
     "gulp-postcss": "^3.0.0",
     "gulp-react": "^2.0.0",
-    "gulp-react-nexus-style": "^1.0.2",
+    "react-nexus": "^1.1.3",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.2",
@@ -54,7 +54,7 @@
     "lodash-next": "^1.12.0",
     "nexus-router": "^0.3.13",
     "nexus-uplink-client": "^1.1.3",
-    "nexus-uplink-simple-server": "^1.2.1",
-    "react-nexus": "^1.1.2"
+    "nexus-uplink-simple-server": "^1.2.5",
+    "react-nexus": "^1.1.3"
   }
 }
